src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_5.snap
---
source: src/parser.rs
description: a * b * c
expression: stmts
---
[
    Infix {
        token: Token(Asterisk, "*", (0,6)->(0,7)),
        left: Infix {
            token: Token(Asterisk, "*", (0,2)->(0,3)),
            left: Identifier {
                token: Token(Identifier, "a", (0,0)->(0,1)),
                name: "a",
            },
            right: Identifier {
                token: Token(Identifier, "b", (0,4)->(0,5)),
                name: "b",
            },
        },
        right: Identifier {
            token: Token(Identifier, "c", (0,8)->(0,9)),
            name: "c",
        },
    },
]
