src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_5_errors.snap
---
source: src/parser/test.rs
description: a * b * c
expression: "parser_errors(\"a * b * c\", errors)"
---
a * b * c
