src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_7.snap
---
source: src/parser/test.rs
description: a + b / c
expression: result
---
[
    Infix {
        token: Token(Plus, "+", (0,2)->(0,3)),
        left: Identifier {
            token: Token(Identifier, "a", (0,0)->(0,1)),
            name: "a",
        },
        right: Infix {
            token: Token(ForwardSlash, "/", (0,6)->(0,7)),
            left: Identifier {
                token: Token(Identifier, "b", (0,4)->(0,5)),
                name: "b",
            },
            right: Identifier {
                token: Token(Identifier, "c", (0,8)->(0,9)),
                name: "c",
            },
            operator: Div,
            range: Range {
                start: Position {
                    line: 0,
                    character: 6,
                },
                end: Position {
                    line: 0,
                    character: 9,
                },
            },
        },
        operator: Plus,
        range: Range {
            start: Position {
                line: 0,
                character: 2,
            },
            end: Position {
                line: 0,
                character: 9,
            },
        },
    },
]

===================================

a + b / c
