src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_9_errors.snap
---
source: src/parser/test.rs
description: a + b * c + d / e - f
expression: "parser_errors(\"a + b * c + d / e - f\", errors)"
---
a + b * c + d / e - f
